<resources>
    <string name="app_name">Linuquiz</string>
    <string name="join">Entrar</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="noAccount">Ainda não tem conta?</string>
    <string name="forgotPsw">Esqueceu a senha?</string>
    <string name="username">Nome de Usuário</string>
    <string name="name">Nome</string>
    <string name="cone_do_perfil">Ícone do perfil</string>
    <string name="ok">Ok</string>
    <string name="programming">Programação</string>
    <string name="custom">Customizar</string>

    <string-array name="profileIcon">
        <item>Arch</item>
        <item>Gentoo</item>
        <item>Debian</item>
        <item>Fedora</item>
        <item>Ubuntu</item>
        <item>Tux</item>
    </string-array>
    <string name="onOpenNav">Open nav</string>
    <string name="onExitNav">Exit nav</string>
    <string name="nickname">Nickname</string>
    <string name="linuxicon">LinuxIcon</string>
    <string name="pts">Pontos: </string>
    <string name="usr">Usuário: </string>
    <string name="nav_open">Abir Menu de Navegação</string>
    <string name="nav_close">Fechar Menu de Navegação</string>
</resources>