<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="br.edu.linuquiz.view.SignActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="165dp"
        android:layout_height="165dp"
        android:layout_marginBottom="38dp"
        android:src="@drawable/icontuxnobg"
        app:layout_constraintBottom_toTopOf="@+id/lytEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="96dp"
        android:layout_height="41dp"
        android:layout_marginHorizontal="140dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ripppleamber"
        android:fontFamily="@font/vt323"
        android:paddingBottom="5dp"
        android:text="@string/join"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lytPassword" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lytEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:hint="@string/email"
        app:boxStrokeWidth="3dp"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:endIconDrawable="@drawable/clipcancel"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405"
        app:startIconDrawable="@drawable/clipemail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLength="25" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lytPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        app:boxStrokeWidth="3dp"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:layout_constraintTop_toBottomOf="@+id/lytEmail"
        app:passwordToggleDrawable="@drawable/clipeye"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/cliplock"
        tools:layout_editor_absoluteX="80dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="16" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtNoAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="90dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/vt323"
        android:gravity="center"
        android:text="@string/noAccount"
        android:textColor="@color/amber3"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    <TextView
        android:id="@+id/txtForgPsw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="90dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/vt323"
        android:gravity="center"
        android:text="@string/forgotPsw"
        android:textColor="@color/amber3"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtNoAccount" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/lytPassword"
        app:layout_constraintStart_toStartOf="@+id/lytPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtForgPsw" />

</androidx.constraintlayout.widget.ConstraintLayout>
